2013-12-10  Hirochika Asai  <asai@scyphus.co.jp>

    * las/token.h: Added opcode prefix/suffix keywords
    * las/tokenizer.c: Added opcode prefix/suffix keywords


2013-12-09  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the DEC instruction

    * las/arch/x86_64/main.c: Added the DIV instruction

    * las/arch/x86_64/main.c: Added the HLT instruction

    * las/arch/x86_64/main.c: Added the IDIV instruction

    * las/arch/x86_64/main.c: Added the IMUL instruction

    * las/arch/x86_64/main.c: Added the IN instruction

    * las/arch/x86_64/main.c: Added the INC instruction

    * las/arch/x86_64/main.c: Added the OUT instruction

    * las/arch/x86_64/main.c: Added the IRET/IRETD/IRETQ instructions

    * las/arch/x86_64/main.c: Added the RET instruction (near return)

    * las/arch/x86_64/binstr.c: Added, a set of functions related to
                                instruction building is moved from
                                las/arch/x86_64/main.c
    * las/arch/x86_64/binstr.h: Added
    * las/arch/x86_64/main.c: Moved some functions to las/arch/x86_64/binstr.c


2013-12-08  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Implemented a part of the assembler

    * las/arch/x86_64/main.c: Added the CMP instruction

    * las/arch/x86_64/main.c: Added the CMPXCHG instruction

    * las/arch/x86_64/main.c: Added the CPUID instruction

    * las/arch/x86_64/main.c: Added the CRC32 instruction

    * las/arch/x86_64/main.c: Added the CWD/CDQ/CQO instruction

    * las/arch/x86_64/main.c: Added the DAA instruction

    * las/arch/x86_64/main.c: Added the DAS instruction


2013-12-07  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Added the BSR instruction

    * las/arch/x86_64/main.c: Added the BSWAP instruction

    * las/arch/x86_64/main.c: Added the BT instruction

    * las/arch/x86_64/main.c: Added the BTC instruction

    * las/arch/x86_64/main.c: Added the BTR instruction
