@@ -1,3 +1,8 @@
+2013-12-13  Hirochika Asai  <asai@scyphus.co.jp>
+
+    * las/preprocessor.c: Added
+
+
 2013-12-10  Hirochika Asai  <asai@scyphus.co.jp>
 
     * las/token.h: Added opcode prefix/suffix keywords
